# kerneld

./: .gitignore  Cargo.toml  README.md
src/: kernel_manager.rs  lib.rs  main.rs
src/routes/: kernel.rs  mod.rs  sysinfo.rs
tests/: test_kernels.rs
