[package]
name = "kernel-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "fast-rng"] }
